Set up Travis build.
- Just builds and tests. Does not push to the repository after success.
- Fix test command for SBT 0.12.x.